Upgrade to Bitbucket Server 9.4.17 and Java 17
Upgrade dependencies for Java 17 compatibility: Lombok 1.18.44, Mockito 5.23.0, JaCoCo 0.8.14, Jackson 2.17.3.
Replace Guava with standard Java utilities to avoid Bitbucket DMZ restrictions.
Bundle Jackson modules (jsr310, jdk8, parameter-names) with jackson-core excluded as the platform blocks plugin access via DmzResolverHook.